<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/neutral_400"
    tools:context=".activities.LandingActivity">

    <ImageButton
        android:id="@+id/profile_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_icon"
        android:contentDescription="@string/shop_icon_dark_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:srcCompat="@drawable/profile_icon_50" />

    <ImageButton
        android:id="@+id/settings_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_icon"
        android:contentDescription="@string/menu_bar_icon_dark_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:srcCompat="@drawable/settings_icon_50" />

    <TextView
        android:id="@+id/greetings_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/salutations_name_home"
        android:textColor="@color/primary_400"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@id/constraint_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_icon"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintVertical_bias="0.5"
        android:gravity="center"/>

    <TextView
        android:id="@+id/assistance_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assistance_home"
        android:textColor="@color/primary_400"
        app:layout_constraintBottom_toTopOf="@id/constraint_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/greetings_text"
        app:layout_constraintVertical_bias="0.3" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75">

        <!-- Panel 1 -->
        <LinearLayout
            android:id="@+id/inventory_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/rounded_button"
            android:orientation="vertical"
            app:layout_constraintWidth_percent="0.4"
            app:layout_constraintHeight_percent="0.4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/chat_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/shopping_button"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="match_parent"
                android:contentDescription="@string/inventory_icon"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:src="@drawable/inventory_icon_60"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manage_inventory_button"
                android:gravity="center"
                android:textColor="@color/primary_400"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>

        <!-- Panel 2 -->
        <LinearLayout
            android:id="@+id/shopping_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/rounded_button"
            android:orientation="vertical"
            app:layout_constraintWidth_percent="0.4"
            app:layout_constraintHeight_percent="0.4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/recipe_button"
            app:layout_constraintStart_toEndOf="@+id/inventory_button"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="match_parent"
                android:contentDescription="@string/list_icon"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:src="@drawable/shop_cart_icon_60"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shop_list_button"
                android:gravity="center"
                android:textColor="@color/primary_400"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>

        <!-- Panel 3 -->
        <LinearLayout
            android:id="@+id/chat_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/rounded_button"
            android:orientation="vertical"
            app:layout_constraintWidth_percent="0.4"
            app:layout_constraintHeight_percent="0.4"
            app:layout_constraintTop_toBottomOf="@+id/inventory_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/recipe_button"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="match_parent"
                android:contentDescription="@string/chat_icon"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:src="@drawable/chat_icon_60"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/consult_dietitian_button"
                android:gravity="center"
                android:textColor="@color/primary_400"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>

        <!-- Panel 4 -->
        <LinearLayout
            android:id="@+id/recipe_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/rounded_button"
            android:orientation="vertical"
            app:layout_constraintWidth_percent="0.4"
            app:layout_constraintHeight_percent="0.4"
            app:layout_constraintTop_toBottomOf="@+id/shopping_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/chat_button"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="match_parent"
                android:contentDescription="@string/recipe_icon"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:src="@drawable/recipe_icon_60"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suggested_recipes_button"
                android:gravity="center"
                android:textColor="@color/primary_400"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>