<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accent_700"
    tools:context=".activities.SettingsPageActivity">

    <ImageButton
        android:id="@+id/back_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_icon"
        android:contentDescription="@string/back_bar_icon_dark_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:srcCompat="@drawable/back_arrow_icon_50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <LinearLayout
        android:id="@+id/roundedContainer"
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rounded_backdrop">

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline"
        app:layout_constraintVertical_bias="0.5">

        <!-- Panel 1 -->
        <LinearLayout
            android:id="@+id/panel1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/rounded_button"
            android:orientation="vertical"
            app:layout_constraintWidth_percent="0.4"
            app:layout_constraintHeight_percent="0.4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/panel3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/panel2"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="match_parent"
                android:contentDescription="@string/report_icon"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:src="@drawable/report_icon_60"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_settings"
                android:gravity="center"
                android:textColor="@color/primary_400"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>

        <!-- Panel 2 -->
        <LinearLayout
            android:id="@+id/panel2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/rounded_button"
            android:orientation="vertical"
            app:layout_constraintWidth_percent="0.4"
            app:layout_constraintHeight_percent="0.4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/panel4"
            app:layout_constraintStart_toEndOf="@+id/panel1"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="match_parent"
                android:contentDescription="@string/request_icon"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:src="@drawable/dietitian_icon_60"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/request_settings"
                android:gravity="center"
                android:textColor="@color/primary_400"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>

        <!-- Panel 3 -->
        <LinearLayout
            android:id="@+id/panel3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/rounded_button"
            android:orientation="vertical"
            app:layout_constraintWidth_percent="0.4"
            app:layout_constraintHeight_percent="0.4"
            app:layout_constraintTop_toBottomOf="@+id/panel1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/panel4"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="match_parent"
                android:contentDescription="@string/logout_icon"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:src="@drawable/logout_icon_60"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout_settings"
                android:gravity="center"
                android:textColor="@color/primary_400"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>

        <!-- Panel 4 -->
        <LinearLayout
            android:id="@+id/panel4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/rounded_button"
            android:orientation="vertical"
            app:layout_constraintWidth_percent="0.4"
            app:layout_constraintHeight_percent="0.4"
            app:layout_constraintTop_toBottomOf="@+id/panel2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/panel3"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="match_parent"
                android:contentDescription="@string/delete_icon"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:src="@drawable/delete_icon_60"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_settings"
                android:gravity="center"
                android:textColor="@color/primary_400"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>